My developer Edition/src/objects/Feedback__c.object
<CustomObject>
    <fields>
        <fullName>Picklist__c</fullName>
        <label>Picklist</label>
        <picklist>
            <picklistValues>
                <fullName>high</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>above average</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>average</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>bad</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ticket_description__c</fullName>
        <label>Ticket_description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>feed_back__c</fullName>
        <label>feed back</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ticket_f__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ticket</label>
        <referenceTo>ticket__c</referenceTo>
        <relationshipLabel>Feedbackks</relationshipLabel>
        <relationshipName>Feedbackks</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Feedback</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>F-{000000}</displayFormat>
        <label>Feedback id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Feedbackks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>